Add argocd deploy config
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Custom
 slides
 
-# Created by https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,helm
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,visualstudiocode,helm
+
+### Helm ###
+# Chart dependencies
+**/charts/*.tgz
 
 ### macOS ###
 # General
@@ -56,4 +60,4 @@ Temporary Items
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,helm
