Add wildcard for clusterResrouceWhitelist
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/deploy/argocd/argocd-apps-values.yaml
+++ b/deploy/argocd/argocd-apps-values.yaml
@@ -44,7 +44,9 @@ argocd-apps:
     destinations:
     - namespace: argocd
       server: https://kubernetes.default.svc
-    clusterResourceWhitelist: []
+    clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
     clusterResourceBlacklist: []
     namespaceResourceBlacklist: []
     namespaceResourceWhitelist:
