Document argocd umbrella chart usage
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/argocd/Chart.yaml
+++ b/argocd/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: cluster-bootstrap
+name: argocd
 description: Bootstrapping for Kubernetes Cluster
 type: application
 version: 0.1.0
