Add createnamespace option for bootstrap appset
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/argocd/argocd-apps-values.yaml
+++ b/argocd/argocd-apps-values.yaml
@@ -108,6 +108,8 @@ argocd-apps:
           automated:
             prune: true
             selfHeal: true
+          syncOptions:
+            - CreateNamespace=true
     syncPolicy:
       preserveResourcesOnDeletion: false
 
