--- a/argocd/argocd-values.yaml
+++ b/argocd/argocd-values.yaml
@@ -5,3 +5,8 @@ argo-cd:
         url: https://github.com/s-baier/gitops-demo.git
         name: gitops-demo
         type: git
+      bitnami-oci:
+        type: helm
+        name: bitnami
+        url: registry-1.docker.io/bitnamicharts/contour
+        enableOci: true
