Add empty un and pw for docker-oci
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/argocd/argocd-values.yaml
+++ b/argocd/argocd-values.yaml
@@ -10,3 +10,5 @@ argo-cd:
         name: docker-oci
         url: registry-1.docker.io
         enableOci: true
+        username: ''
+        password: ''
