Fix type error on argocd
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/argocd/argocd-values.yaml
+++ b/argocd/argocd-values.yaml
@@ -9,6 +9,4 @@ argo-cd:
         type: helm
         name: docker-oci
         url: registry-1.docker.io
-        enableOci: true
-        username: ''
-        password: ''
+        enableOci: 'true'
