--- a/argocd/argocd-apps-values.yaml
+++ b/argocd/argocd-apps-values.yaml
@@ -62,6 +62,7 @@ argocd-apps:
     description: Cluster Bootstrap
     sourceRepos:
     - https://github.com/s-baier/gitops-demo.git
+    - registry-1.docker.io/bitnamicharts
     destinations:
     - namespace: '*'
       server: https://kubernetes.default.svc
