Refactor grafana hostname
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/bootstrap/grafana-operator/values.yaml
+++ b/bootstrap/grafana-operator/values.yaml
@@ -2,7 +2,7 @@ grafana-operator:
   grafana:
     ingress:
       enabled: true
-      hostname: grafana.demo.cn.evoila-lab.work
+      hostname: grafana.demo.local
       ingressClassName: contour
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-staging
