--- a/bootstrap/grafana-operator/values.yaml
+++ b/bootstrap/grafana-operator/values.yaml
@@ -2,9 +2,9 @@ grafana-operator:
   grafana:
     ingress:
       enabled: true
-      hostname: grafana.demo.local
+      hostname: grafana.demo.cn.evoila-lab.work
       ingressClassName: contour
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-staging
       tls: true
-      # tlsSecret: grafana.demo.cn.evoila-lab.work-tls
+      tlsSecret: grafana.demo.cn.evoila-lab.work-tls
