--- a/bootstrap/grafana-operator/values.yaml
+++ b/bootstrap/grafana-operator/values.yaml
@@ -5,6 +5,6 @@ grafana-operator:
       hostname: grafana.demo.cn.evoila-lab.work
       ingressClassName: contour
       annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-staging
+        cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
       tls: true
       tlsSecret: grafana.demo.cn.evoila-lab.work-tls
