--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -1,6 +1,12 @@
 name: Go
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+    - 'app/**'
+  pull_request:
+    paths:
+    - 'app/**'
 
 jobs:
   build:
