--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -33,6 +33,7 @@ jobs:
   # See also https://docs.docker.com/docker-hub/builds/
   push:
     runs-on: ubuntu-latest
+    needs: build
     permissions:
       packages: write
       contents: read
