--- a/.github/workflows/chart-ci.yml
+++ b/.github/workflows/chart-ci.yml
@@ -1,7 +1,6 @@
 ## https://github.com/bitnami/charts/blob/main/.github/workflows/ci-pipeline.yml
-## https://github.com/bitnami/charts/blob/main/.github/workflows/cd-pipeline.yml
-
-name: Helm Chart CI/CD
+##
+name: Helm Chart CI
 
 on: # rebuild any PRs and main branch changes
   pull_request_target:
