--- a/.github/workflows/chart-cd.yml
+++ b/.github/workflows/chart-cd.yml
@@ -1,6 +1,6 @@
 ## https://github.com/bitnami/charts/blob/main/.github/workflows/cd-pipeline.yml
 ##
-name: Helm Chart CD
+name: '[CI/CD] Helm Chart CD'
 
 on: # rebuild any PRs and main branch changes
   push:
