--- a/.github/workflows/chart-ci.yml
+++ b/.github/workflows/chart-ci.yml
@@ -1,6 +1,6 @@
 ## https://github.com/bitnami/charts/blob/main/.github/workflows/ci-pipeline.yml
 ##
-name: Helm Chart CI
+name: '[CI/CD] Helm Chart CI'
 
 on: # rebuild any PRs and main branch changes
   pull_request_target:
