--- a/.github/workflows/chart-ci.yml
+++ b/.github/workflows/chart-ci.yml
@@ -104,11 +104,11 @@ jobs:
       # - name: Test Chart
       #   run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
       - name: Build chart dependencies
-        run: helm dependency build ${{ needs.get-chart.outputs.chart }}
+        run: helm dependency build .
       - name: Lint chart
-        run: helm lint ${{ needs.get-chart.outputs.chart }}
+        run: helm lint .
       - name: Package chart
-        run: helm package ${{ needs.get-chart.outputs.chart }} .
+        run: helm package .
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
       - name: Push chart to registry
