--- a/.github/workflows/chart-ci.yml
+++ b/.github/workflows/chart-ci.yml
@@ -88,13 +88,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: get-chart
     if: ${{ needs.get-chart.outputs.result == 'ok' }}
-    name: Verify and publish ${{ needs.get-chart.outputs.chart }}
+    name: Verify and publish chart ${{ needs.get-chart.outputs.chart }}
     permissions:
       packages: write
       contents: read
-    # defaults:
-    #   run:
-    #     working-directory: ./charts/${{ needs.get-chart.outputs.chart }}
+    defaults:
+      run:
+        working-directory: ./charts
     steps:
       - uses: actions/checkout@v3
         name: Checkout Repository
@@ -108,12 +108,13 @@ jobs:
           echo ${{ needs.get-chart.outputs.chart }}
           pwd
           ls -la
+          ls -la ..
       - name: Build chart dependencies
-        run: helm dependency build ${{ needs.get-chart.outputs.chart }}
+        run: helm dependency build ./${{ needs.get-chart.outputs.chart }}
       - name: Lint chart
-        run: helm lint ${{ needs.get-chart.outputs.chart }}
+        run: helm lint ./${{ needs.get-chart.outputs.chart }}
       - name: Package chart
-        run: helm package ${{ needs.get-chart.outputs.chart }}
+        run: helm package ./${{ needs.get-chart.outputs.chart }}
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
       - name: Push chart to registry
