--- a/envs/dev/app/Chart.yaml
+++ b/envs/dev/app/Chart.yaml
@@ -6,5 +6,5 @@ version: 0.1.0
 appVersion: "0.1.0"
 dependencies:
   - name: app
-    repository: oci://ghcr.io/s-baier/gitops-demo
+    repository: oci://ghcr.io/s-baier
     version: 0.1.0
