--- a/envs/dev/app/values.yaml
+++ b/envs/dev/app/values.yaml
@@ -1,2 +1,16 @@
 app:
   appPort: 9090
+  ingress:
+    enabled: true
+    className: contour
+    annotations:
+      cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
+  hosts:
+    - host: app.demo.cn.evoila-lab.work
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls:
+   - secretName: app-tls
+     hosts:
+       - app.demo.cn.evoila-lab.work
