Add image info for app on dev
Signed-off-by: Sebastian Baier <sbaier@evoila.de>

--- a/envs/dev/app/values.yaml
+++ b/envs/dev/app/values.yaml
@@ -1,4 +1,9 @@
 app:
+  image:
+    repository: "ghcr.io/s-baier/demo-app"
+    pullPolicy: Always
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "latest"
   appPort: 9090
   ingress:
     enabled: true
