--- a/argocd/argocd-apps-values.yaml
+++ b/argocd/argocd-apps-values.yaml
@@ -1,4 +1,5 @@
 argocd-apps:
+  ## Argo CD Applications
   applications:
   - name: argo-cd
     namespace: argocd
@@ -31,6 +32,7 @@ argocd-apps:
     - name: url
       value: https://argoproj.github.io/
 
+  ## Argo CD Projects
   projects:
   - name: argo
     namespace: argocd
@@ -76,30 +78,31 @@ argocd-apps:
       kind: '*'
     sourceNamespaces:
     - '*'
-  - name: dev
-    namespace: argocd
-    additionalLabels: {}
-    additionalAnnotations: {}
-    finalizers:
-    - resources-finalizer.argocd.argoproj.io
-    description: Development
-    sourceRepos:
-    - https://github.com/s-baier/gitops-demo.git
-    - ghcr.io/s-baier
-    destinations:
-    - namespace: '*'
-      server: https://kubernetes.default.svc
-    clusterResourceWhitelist:
-    - group: '*'
-      kind: '*'
-    clusterResourceBlacklist: []
-    namespaceResourceBlacklist: []
-    namespaceResourceWhitelist:
-    - group: '*'
-      kind: '*'
-    sourceNamespaces:
-    - '*'
+  # - name: dev
+  #   namespace: argocd
+  #   additionalLabels: {}
+  #   additionalAnnotations: {}
+  #   finalizers:
+  #   - resources-finalizer.argocd.argoproj.io
+  #   description: Development
+  #   sourceRepos:
+  #   - https://github.com/s-baier/gitops-demo.git
+  #   - ghcr.io/s-baier
+  #   destinations:
+  #   - namespace: '*'
+  #     server: https://kubernetes.default.svc
+  #   clusterResourceWhitelist:
+  #   - group: '*'
+  #     kind: '*'
+  #   clusterResourceBlacklist: []
+  #   namespaceResourceBlacklist: []
+  #   namespaceResourceWhitelist:
+  #   - group: '*'
+  #     kind: '*'
+  #   sourceNamespaces:
+  #   - '*'
 
+  ## Argo CD ApplicationSets
   applicationsets:
   - name: bootstrap
     namespace: argocd
@@ -134,116 +137,39 @@ argocd-apps:
             - CreateNamespace=true
     syncPolicy:
       preserveResourcesOnDeletion: false
-  - name: dev
-    namespace: argocd
-    additionalLabels: {}
-    additionalAnnotations: {}
-    generators:
-    - git:
-        repoURL: https://github.com/s-baier/gitops-demo.git
-        revision: HEAD
-        directories:
-        - path: envs/dev/*
-    template:
-      metadata:
-        name: '{{path.basename}}'
-        labels:
-          project: '{{path.basename}}'
-        annotations: {}
-      spec:
-        project: dev
-        source:
-          repoURL: https://github.com/s-baier/gitops-demo.git
-          targetRevision: HEAD
-          path: '{{path}}'
-        destination:
-          server: https://kubernetes.default.svc
-          namespace: '{{ path.basename }}'
-        syncPolicy:
-          automated:
-            prune: true
-            selfHeal: true
-          syncOptions:
-            - CreateNamespace=true
-    syncPolicy:
-      preserveResourcesOnDeletion: false
-
-  # --  Deploy Argo CD Applications/ApplicationSets/Projects within this helm release
-  # @default -- `[]` (See [values.yaml])
-  ## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/applicationset/
-  itemTemplates: []
-  # - items:
-  #     - name: my-appset
-  #       generators: &generators
-  #         - list:
-  #             elements:
-  #               - cluster: engineering-dev
-  #                 url: https://1.2.3.4
-  #               - cluster: engineering-prod
-  #                 url: https://2.4.6.8
-  #               - cluster: finance-preprod
-  #                 url: https://9.8.7.6
+  # - name: dev
+  #   namespace: argocd
+  #   additionalLabels: {}
+  #   additionalAnnotations: {}
+  #   generators:
+  #   - git:
+  #       repoURL: https://github.com/s-baier/gitops-demo.git
+  #       revision: HEAD
+  #       directories:
+  #       - path: envs/dev/*
   #   template:
-  #     apiVersion: argoproj.io/v1alpha1
-  #     kind: ApplicationSet
   #     metadata:
-  #       name: "{{ .name }}"
+  #       name: '{{path.basename}}'
+  #       labels:
+  #         project: '{{path.basename}}'
+  #       annotations: {}
   #     spec:
-  #       generators: *generators
-  #       template:
-  #         metadata:
-  #           name: "{{`{{cluster}}`}}-guestbook"
-  #         spec:
-  #           project: my-project
-  #           source:
-  #             repoURL: https://github.com/infra-team/cluster-deployments.git
-  #             targetRevision: HEAD
-  #             path: guestbook/{{`{{cluster}}`}}
-  #           destination:
-  #             server: "{{`{{cluster}}`}}"
-  #             namespace: guestbook
-  # - items:
-  #     - name: my-appset
-  #       generators:
-  #         - list:
-  #             elements:
-  #               - cluster: engineering-dev
-  #                 url: https://1.2.3.4
-  #               - cluster: engineering-prod
-  #                 url: https://2.4.6.8
-  #               - cluster: finance-preprod
-  #                 url: https://9.8.7.6
-  #   template: |-
-  #     apiVersion: argoproj.io/v1alpha1
-  #     kind: ApplicationSet
-  #     metadata:
-  #       name: {{ .name }}
-  #     spec:
-  #       generators: {{ toYaml .generators | nindent 4 }}
-  #       template:
-  #         metadata:
-  #           name: '{{`{{cluster}}`}}-guestbook'
-  #         spec:
-  #           project: my-project
-  #           source:
-  #             repoURL: https://github.com/infra-team/cluster-deployments.git
-  #             targetRevision: HEAD
-  #             path: guestbook/{{`{{cluster}}`}}
-  #           destination:
-  #             server: '{{`{{cluster}}`}}'
-  #             namespace: guestbook
+  #       project: dev
+  #       source:
+  #         repoURL: https://github.com/s-baier/gitops-demo.git
+  #         targetRevision: HEAD
+  #         path: '{{path}}'
+  #       destination:
+  #         server: https://kubernetes.default.svc
+  #         namespace: '{{ path.basename }}'
+  #       syncPolicy:
+  #         automated:
+  #           prune: true
+  #           selfHeal: true
+  #         syncOptions:
+  #           - CreateNamespace=true
+  #   syncPolicy:
+  #     preserveResourcesOnDeletion: false
 
-  # -- Deploy Argo UI Extensions within this helm release
-  # @default -- `[]` (See [values.yaml])
-  ## This function in tech preview stage, do expect unstability or breaking changes in newer versions. Bump image.tag if necessary.
-  ## Ref: https://github.com/argoproj-labs/argocd-extensions
+  itemTemplates: []
   extensions: []
-    # - name: example
-    #   namespace: argocd
-    #   additionalLabels: {}
-    #   additionalAnnotations: {}
-    #   sources:
-    #     - git:
-    #         url: https://github.com/argoproj-labs/argocd-example-extension.git
-    #     - web:
-    #         url: https://github.com/argoproj-labs/argocd-example-extension/releases/download/v0.1.0/extension.tar
