--- a/argocd/argocd-values.yaml
+++ b/argocd/argocd-values.yaml
@@ -10,8 +10,8 @@ argo-cd:
         name: bitnami-charts
         url: registry-1.docker.io/bitnamicharts/
         enableOci: 'true'
-      sbaier-charts:
-        type: helm
-        name: sbaier-charts
-        url: ghcr.io/s-baier/
-        enableOci: 'true'
+      # sbaier-charts:
+      #   type: helm
+      #   name: sbaier-charts
+      #   url: ghcr.io/s-baier/
+      #   enableOci: 'true'
