--- a/argocd/argocd-apps-values.yaml
+++ b/argocd/argocd-apps-values.yaml
@@ -78,29 +78,29 @@ argocd-apps:
       kind: '*'
     sourceNamespaces:
     - '*'
-  # - name: dev
-  #   namespace: argocd
-  #   additionalLabels: {}
-  #   additionalAnnotations: {}
-  #   finalizers:
-  #   - resources-finalizer.argocd.argoproj.io
-  #   description: Development
-  #   sourceRepos:
-  #   - https://github.com/s-baier/gitops-demo.git
-  #   - ghcr.io/s-baier
-  #   destinations:
-  #   - namespace: '*'
-  #     server: https://kubernetes.default.svc
-  #   clusterResourceWhitelist:
-  #   - group: '*'
-  #     kind: '*'
-  #   clusterResourceBlacklist: []
-  #   namespaceResourceBlacklist: []
-  #   namespaceResourceWhitelist:
-  #   - group: '*'
-  #     kind: '*'
-  #   sourceNamespaces:
-  #   - '*'
+  - name: dev
+    namespace: argocd
+    additionalLabels: {}
+    additionalAnnotations: {}
+    finalizers:
+    - resources-finalizer.argocd.argoproj.io
+    description: Development
+    sourceRepos:
+    - https://github.com/s-baier/gitops-demo.git
+    - ghcr.io/s-baier
+    destinations:
+    - namespace: '*'
+      server: https://kubernetes.default.svc
+    clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
+    clusterResourceBlacklist: []
+    namespaceResourceBlacklist: []
+    namespaceResourceWhitelist:
+    - group: '*'
+      kind: '*'
+    sourceNamespaces:
+    - '*'
 
   ## Argo CD ApplicationSets
   applicationsets:
@@ -137,39 +137,39 @@ argocd-apps:
             - CreateNamespace=true
     syncPolicy:
       preserveResourcesOnDeletion: false
-  # - name: dev
-  #   namespace: argocd
-  #   additionalLabels: {}
-  #   additionalAnnotations: {}
-  #   generators:
-  #   - git:
-  #       repoURL: https://github.com/s-baier/gitops-demo.git
-  #       revision: HEAD
-  #       directories:
-  #       - path: envs/dev/*
-  #   template:
-  #     metadata:
-  #       name: '{{path.basename}}'
-  #       labels:
-  #         project: '{{path.basename}}'
-  #       annotations: {}
-  #     spec:
-  #       project: dev
-  #       source:
-  #         repoURL: https://github.com/s-baier/gitops-demo.git
-  #         targetRevision: HEAD
-  #         path: '{{path}}'
-  #       destination:
-  #         server: https://kubernetes.default.svc
-  #         namespace: '{{ path.basename }}'
-  #       syncPolicy:
-  #         automated:
-  #           prune: true
-  #           selfHeal: true
-  #         syncOptions:
-  #           - CreateNamespace=true
-  #   syncPolicy:
-  #     preserveResourcesOnDeletion: false
+  - name: dev
+    namespace: argocd
+    additionalLabels: {}
+    additionalAnnotations: {}
+    generators:
+    - git:
+        repoURL: https://github.com/s-baier/gitops-demo.git
+        revision: HEAD
+        directories:
+        - path: envs/dev/*
+    template:
+      metadata:
+        name: '{{path.basename}}'
+        labels:
+          project: '{{path.basename}}'
+        annotations: {}
+      spec:
+        project: dev
+        source:
+          repoURL: https://github.com/s-baier/gitops-demo.git
+          targetRevision: HEAD
+          path: '{{path}}'
+        destination:
+          server: https://kubernetes.default.svc
+          namespace: '{{ path.basename }}'
+        syncPolicy:
+          automated:
+            prune: true
+            selfHeal: true
+          syncOptions:
+            - CreateNamespace=true
+    syncPolicy:
+      preserveResourcesOnDeletion: false
 
   itemTemplates: []
   extensions: []
